# aws-qa-learning

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
lambdas/: echo_handler.py  stream_handler.py  writer_handler.py
src/aws_qa_learning/: aws_clients.py  utils.py
src/aws_qa_learning/helpers/: dynamodb.py  s3.py  sqs.py
src/aws_qa_learning/scripts/: s3_basics.py
tests/: conftest.py  factories.py  test_s3_basics.py  test_s3_events.py  test_s3_versioning.py  test_setup_verification.py
tests/dynamodb/: test_dynamodb_basics.py  test_dynamodb_condition_expression.py  test_dynamodb_gsi.py  test_dynamodb_query.py
tests/integration/: test_dynamodb_stream_replication.py  test_event_bridge_sqs.py  test_lambda_writer_puts_item_in_dynamodb.py  test_s3_put_triggers_sqs_notification.py  test_sns_fanout.py  test_sns_to_sqs.py  test_state_machine_lambda_event_bridge.py  test_state_machine_lambda_writer.py
tests/lambda/: test_lambda_basics.py
tests/s3/: conftest.py  test_s3_basics.py  test_s3_events.py  test_s3_presigned.py  test_s3_versioning.py
tests/sns/: conftest.py  test_sns_basics.py
tests/sqs/: conftest.py  test_dlq.py  test_sqs_basics.py
